# atomate2-turbomole

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/utils/: release_tag.msg.txt
.github/workflows/: release.yml  testing.yml  update-precommit.yml
doc/: Makefile
doc/source/: conf.py  index.rst  license.rst
doc/source/api/: index.rst
doc/source/dev/: devinstall.rst
doc/source/user/: index.rst  install.rst  introduction.rst  quickstart.rst  tuning.rst
requirements/: requirements.txt
src/atomate2/myaddon/: mymodule.py
src/atomate2/turbomole/: __init__.py  _version.py  utils.py
src/atomate2/turbomole/custodian/: __init__.py  jobs.py  validators.py
src/atomate2/turbomole/flows/: __init__.py  core.py
src/atomate2/turbomole/jobs/: __init__.py  base.py  core.py
src/atomate2/turbomole/schemas/: __init__.py  calculation.py  task.py
src/atomate2/turbomole/schemas/calc_types/: __init__.py
src/atomate2/turbomole/sets/: __init__.py  base.py  core.py
tests/: __init__.py  conftest.py  test_atomate2_turbomole.py  test_custodian_jobs.py  test_database.py  test_myfunc.py  test_utils.py
tests/custodian/: __init__.py  test_jobs.py  test_validators.py
tests/flows/: __init__.py  test_core.py
tests/jobs/: __init__.py  test_base.py  test_core.py
tests/schemas/: __init__.py  test_calculation.py  test_task.py
tests/sets/: __init__.py  test_core.py
tests/testfiles/control_files/: minimal.control
tests/testfiles/flows/dscf_flow_maker_001/job_2023-05-11-13-50-22-250262-49728/: define_parameters.json
tests/testfiles/flows/dscf_flow_maker_001/job_2023-05-11-13-50-22-323205-41682/: control  coord  dscf.out  energy  mos  statistics
tests/testfiles/flows/dscf_maker/001_normal/: create_and_run_flow.py  h2.xyz
tests/testfiles/flows/jobex_maker/001_default/: create_and_run_flow.py
tests/testfiles/flows/jobex_maker/001_ridft/: create_and_run_flow.py
tests/testfiles/flows/jobex_maker/002_database/: create_and_run_flow.py
tests/testfiles/flows/jobex_maker/003_rimp2/: create_and_run_flow.py
tests/testfiles/flows/jobex_maker/004_options/: MnH2.xyz  create_and_run_flow.py
tests/testfiles/flows/jobex_maker/005_rimp2_options/: create_and_run_flow.py
tests/testfiles/flows/jobex_maker/006_riper/: create_and_run_flow.py
tests/testfiles/flows/ricc2_maker/001_default/: create_and_run_flow.py
tests/testfiles/flows/ridft_maker/001_normal/: create_and_run_flow.py
tests/testfiles/flows/riper_maker/001_normal/: create_and_run_flow.py
tests/testfiles/flows/scan_maker/001_normal/: create_and_run_flow.py
tests/testfiles/flows/scan_maker/002_rigid_scan_ricc2/: create_and_run_flow.py
tests/testfiles/flows/scan_maker/003_rigid_scan_dscf/: create_and_run_flow.py
tests/testfiles/flows/scan_maker/004_relaxed_scan_ridft/: create_and_run_flow.py
tests/testfiles/jobex/: time.stat_dscf  time.stat_hours  time.stat_mp2  time.stat_raise  time.stat_riper
tests/testfiles/jobs/define_maker_002/job_2023-05-11-12-44-35-468615-49328/: control
tests/testfiles/jobs/dscf_maker_001/job_2023-05-11-13-08-14-583157-21573/: control  custodian.json  dscf.out  energy  mos  statistics
tests/testfiles/misc/: results_db.yaml
tests/testfiles/outputs/: ridft.out  ridft_stopped.out  ridft_unconverged.out  riper.out  riper_unconverged.out
tests/testfiles/reference_runs/dscf/: dscf.out  mos
tests/testfiles/reference_runs/jobex/: GEO_OPT_CONVERGED  auxbasis  control  coord  energy  gradient  hessapprox  job.last  job.start  mos  time.stat
tests/testfiles/reference_runs/ricc2/: control  gradient  mos  ricc2.out  ridft.out
tests/testfiles/reference_runs/ridft/: control  energy  mos  ridft.out
tests/testfiles/reference_runs/riper/: auxbasis  basis  control  coord  energy  gradient  mos
tests/testfiles/reference_runs/scan/scan_step_1/: control  coord  energy  mos  ridft.out
tests/testfiles/reference_runs/scan/scan_step_2/: control  energy  mos  ridft.out
tests/testfiles/reference_runs/scan/scan_step_3/: control  energy  mos  ridft.out
tests/testfiles/reference_runs/scan/scan_step_4/: control  energy  mos  ridft.out
tests/testfiles/reference_runs/scan/scan_step_5/: auxbasis  control  energy  mos  ridft.out
tests/testfiles/reference_runs/scan/scan_step_6/: control  energy  mos  ridft.out
tests/testfiles/reference_runs/scan/scan_step_7/: basis  control  energy  mos  ridft.out
tests/testfiles/reference_runs/scan_jobex/scan_step_1/: auxbasis  control  coord  energy  gradient  hessapprox  job.last  job.start  mos  time.stat
tests/testfiles/reference_runs/scan_jobex/scan_step_2/: control  coord  energy  gradient  hessapprox  job.last  job.start  mos  time.stat
tests/testfiles/reference_runs/scan_jobex/scan_step_3/: control  coord  energy  gradient  hessapprox  job.last  job.start  mos  time.stat
tests/testfiles/reference_runs/scan_jobex/scan_step_4/: control  coord  energy  gradient  hessapprox  job.last  job.start  mos  time.stat
tests/testfiles/reference_runs/scan_jobex/scan_step_5/: control  coord  energy  gradient  hessapprox  job.last  job.start  mos  time.stat
tests/testfiles/reference_runs/scan_jobex/scan_step_6/: control  coord  energy  gradient  hessapprox  job.last  job.start  mos  time.stat
tests/testfiles/reference_runs/scan_jobex/scan_step_7/: control  coord  energy  gradient  hessapprox  job.last  job.start  mos  time.stat
tests/testfiles/reference_runs/scan_jobex/scan_step_8/: control  coord  energy  gradient  hessapprox  job.last  job.start  mos  time.stat
tests/testfiles/reference_runs/scan_jobex/scan_step_9/: control  coord  energy  gradient  hessapprox  job.last  job.start  jobex.err  mos  time.stat
tests/testfiles/reference_runs/scan_ricc2/scan_step_1/: control  energy  gradient  mos  ricc2.out
tests/testfiles/reference_runs/scan_ricc2/scan_step_2/: auxbasis  control  energy  gradient  mos  ricc2.out
tests/testfiles/reference_runs/scan_ricc2/scan_step_3/: control  energy  gradient  mos  ricc2.out
tests/testfiles/reference_runs/scan_ricc2/scan_step_4/: mos  (+4 more)
(+490 files in other folders)
